--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sudipa Subedi - Finance & Management Professional | Portfolio</title>
+    <title>Alisha Poudel</title>
     <meta name="description" content="BBA Graduate specializing in Finance, Banking & Management. Experienced in financial analysis, business strategy, and team leadership. Ready to drive growth in dynamic organizations." />
     <meta name="author" content="Sudipa Subedi" />
     <meta name="keywords" content="finance professional, BBA graduate, management, banking, financial analysis, business strategy, Nepal" />
