--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alisha Poudel</title>
-    <meta name="description" content="BBA Graduate specializing in Finance, Banking & Management. Experienced in financial analysis, business strategy, and team leadership. Ready to drive growth in dynamic organizations." />
+    <meta name="description" content="An Environmental Engineer." />
     <meta name="author" content="Sudipa Subedi" />
-    <meta name="keywords" content="finance professional, BBA graduate, management, banking, financial analysis, business strategy, Nepal" />
+    <meta name="keywords" content="Environmental, engineer, environmental engineer, finance professional, BBA graduate, management, banking, financial analysis, business strategy, Nepal" />
 
-    <meta property="og:title" content="Sudipa Subedi - Finance & Management Professional" />
-    <meta property="og:description" content="BBA Graduate specializing in Finance, Banking & Management. Experienced in financial analysis, business strategy, and team leadership." />
+    <meta property="og:title" content="Alisha Poudel" />
+    <meta property="og:description" content="An Environmental Engineer." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@sudipa_subedi" />
+    <meta name="twitter:site" content="@alisha_poudel" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
