--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Not Found - Sudipa Subedi Portfolio</title>
+    <title>Page Not Found - Alisha Poudel Portfolio</title>
     <script>
       // Redirect to home page for GitHub Pages SPA handling
       window.location.href = '/';
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div style="text-align: center; padding: 50px; font-family: Arial, sans-serif;">
-      <h1>Redirecting to Sudipa Subedi's Portfolio...</h1>
+      <h1>Redirecting to Alisha Poudel's Portfolio...</h1>
       <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
     </div>
   </body>
