--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alisha Poudel</title>
     <meta name="description" content="An Environmental Engineer." />
-    <meta name="author" content="Sudipa Subedi" />
+    <meta name="author" content="Alisha Poudel" />
     <meta name="keywords" content="Environmental, engineer, environmental engineer, finance professional, BBA graduate, management, banking, financial analysis, business strategy, Nepal" />
 
     <meta property="og:title" content="Alisha Poudel" />
